// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and

syntax="proto3";

option java_multiple_files = true;
option java_package = "com.song.cn.grpc";
option java_outer_classname = "DataRelationProto";
option objc_class_prefix = "DRP";

package grpc;

//service definition
service DataRelationGreeter{
    rpc getProgressStatus (DataRelationRequest) returns (DataRelationReply) {};

    rpc setTaskPath (DataRelationRequest) returns (DataRelationReply) {};

}

//request message
message DataRelationRequest {
    //扫描路径
    string scanningPath = 1;
}

//response message
message DataRelationReply{
    //正在处理的任务周期
    int32 handlingTask = 1;
    //未处理的任务周期
    int32 unhandlingTask =2;
    //处理完成的任务周期
    int32 handledTask = 3;
}